fix: TS errors and warnings

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
 		// See also https://aka.ms/tsconfig/module
 		// "module": "nodenext",
 		// "target": "esnext",
-		"types": [],
+		// "types": [],
 		// For nodejs:
 		// "lib": ["esnext"],
 		// "types": ["node"],
@@ -27,7 +27,7 @@
 
 		// Stricter Typechecking Options
 		"noUncheckedIndexedAccess": true,
-		"exactOptionalPropertyTypes": true,
+		// "exactOptionalPropertyTypes": true,
 
 		// Style Options
 		// "noImplicitReturns": true,
@@ -42,7 +42,6 @@
 
 		// Recommended Options
 		"strict": true,
-		"jsx": "react-jsx",
 		"verbatimModuleSyntax": true,
 		"isolatedModules": true,
 		"noUncheckedSideEffectImports": true,
