--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,8 @@
 	// Visit https://aka.ms/tsconfig to read more about this file
 	"compilerOptions": {
 		// File Layout
-		// "rootDir": "./src",
-		// "outDir": "./dist",
+		"rootDir": "./src",
+		"outDir": "./dist",
 
 		"module": "ESNext",
 		"target": "ES2022",
@@ -47,5 +47,6 @@
 		"noUncheckedSideEffectImports": true,
 		"moduleDetection": "force",
 		"skipLibCheck": true
-	}
+	},
+	"include": ["./src/**/*.ts"]
 }
